// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Suppressions createOrUpdateSuppressions ignores deprecated email field when recipient field is present 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "recipients": Array [
        Object {
          "description": undefined,
          "recipient": "example@test.com",
          "type": "transactional",
        },
      ],
    },
    "headers": Object {},
    "method": "PUT",
    "url": "/suppression-list",
  },
  "type": "CREATE_OR_UPDATE_SUPPRESSIONS",
}
`;

exports[`Action Creator: Suppressions createOrUpdateSuppressions transform non-standard type field values 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "recipients": Array [
        Object {
          "description": undefined,
          "recipient": "example@test.com",
          "type": "non_transactional",
        },
        Object {
          "description": undefined,
          "recipient": "example@test.com",
          "type": "transactional",
        },
      ],
    },
    "headers": Object {},
    "method": "PUT",
    "url": "/suppression-list",
  },
  "type": "CREATE_OR_UPDATE_SUPPRESSIONS",
}
`;

exports[`Action Creator: Suppressions createOrUpdateSuppressions transforms deprecated email to recipient field 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "recipients": Array [
        Object {
          "description": undefined,
          "recipient": "example@test.com",
          "type": "transactional",
        },
      ],
    },
    "headers": Object {},
    "method": "PUT",
    "url": "/suppression-list",
  },
  "type": "CREATE_OR_UPDATE_SUPPRESSIONS",
}
`;

exports[`Action Creator: Suppressions createOrUpdateSuppressions with a subaccount 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "recipients": Array [
        Object {
          "description": undefined,
          "recipient": "example@test.com",
          "type": "transactional",
        },
      ],
    },
    "headers": Object {
      "x-msys-subaccount": 999,
    },
    "method": "PUT",
    "url": "/suppression-list",
  },
  "type": "CREATE_OR_UPDATE_SUPPRESSIONS",
}
`;

exports[`Action Creator: Suppressions createOrUpdateSuppressions with deprecated non_transactional and transactional field 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "recipients": Array [
        Object {
          "description": undefined,
          "recipient": "example@test.com",
          "type": "non_transactional",
        },
        Object {
          "description": undefined,
          "recipient": "example@test.com",
          "type": "transactional",
        },
      ],
    },
    "headers": Object {},
    "method": "PUT",
    "url": "/suppression-list",
  },
  "type": "CREATE_OR_UPDATE_SUPPRESSIONS",
}
`;

exports[`Action Creator: Suppressions createOrUpdateSuppressions without a subaccount 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "recipients": Array [
        Object {
          "description": undefined,
          "recipient": "example@test.com",
          "type": "transactional",
        },
      ],
    },
    "headers": Object {},
    "method": "PUT",
    "url": "/suppression-list",
  },
  "type": "CREATE_OR_UPDATE_SUPPRESSIONS",
}
`;

exports[`Action Creator: Suppressions parseSuppressionsFile request to parse local file 1`] = `
Object {
  "meta": Object {
    "file": Object {
      "name": "example.csv",
      "size": 123,
    },
    "validate": Array [
      [MockFunction],
      [MockFunction],
      [MockFunction],
    ],
  },
  "type": "PARSE_SUPPRESSIONS_FILE",
}
`;

exports[`Action Creator: Suppressions uploadSuppressions parses local file and creates suppressions 1`] = `
Array [
  Array [
    Object {
      "meta": Object {
        "file": Object {
          "name": "example.csv",
          "size": 123,
        },
        "validate": Array [
          [MockFunction],
          [MockFunction],
          [MockFunction],
        ],
      },
      "type": "PARSE_SUPPRESSIONS_FILE",
    },
  ],
  Array [
    Object {
      "meta": Object {
        "data": Object {
          "recipients": Array [
            Object {
              "description": undefined,
              "recipient": "example@test.com",
              "type": "transactional",
            },
          ],
        },
        "headers": Object {
          "x-msys-subaccount": 999,
        },
        "method": "PUT",
        "url": "/suppression-list",
      },
      "type": "CREATE_OR_UPDATE_SUPPRESSIONS",
    },
  ],
]
`;
